--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,12 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "kriswallsmith/buzz": "^1.2",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "laravelcollective/html": "^6.2"
+        "laravelcollective/html": "^6.2",
+        "mailgun/mailgun-php": "^3.2",
+        "nyholm/psr7": "^1.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
