--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "8.0",
+        "ext-json": "*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -17,8 +18,7 @@
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.2",
         "mailgun/mailgun-php": "^3.2",
-        "nyholm/psr7": "^1.3",
-        "ext-json": "*"
+        "nyholm/psr7": "^1.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
