--- a/resources/assets/package.json
+++ b/resources/assets/package.json
@@ -7,13 +7,19 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "NODE_ENV=development vite",
     "build": "vite build"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.0.4",
+    "mixitup": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "redux": "^4.2.1",
+    "vite": "^4.4.9"
   }
 }
