--- a/resources/assets/package.json
+++ b/resources/assets/package.json
@@ -21,5 +21,17 @@
     "react-router-dom": "^6.15.0",
     "redux": "^4.2.1",
     "vite": "^4.4.9"
+  },
+  "devDependencies": {
+    "@tarik02/eslint-config-type-1": "^0.2.3",
+    "@tarik02/eslint-config-type-1-import": "^0.2.3",
+    "@tarik02/eslint-config-type-1-react": "^0.2.3",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint": "^8.47.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-redux": "^4.0.0",
+    "typescript": "^5.2.2"
   }
 }
